Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </ul>
 
 <h2>
-<a id="installation-setup---windows" class="anchor" href="#installation-setup---windows" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation Setup - Windows</h2>
+<a id="installation-setup-for-windows" class="anchor" href="#installation-setup-for-windows" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation Setup for Windows</h2>
 
 <ul>
 <li>Install Ruby</li>
