Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,22 +35,23 @@
 <a id="installation-setup---mac" class="anchor" href="#installation-setup---mac" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation Setup - MAC</h2>
 
 <ul>
-<li>Install Ruby</li>
-<li>Install Cucumber</li>
-<li>Install Capybara</li>
-<li>Install Selenium webdriver</li>
-<li>Install Rspec</li>
+<li>Install Ruby - brew install cucumber</li>
+<li>Install Cucumber - gem install cucumber</li>
+<li>Install Capybara - gem install capybara</li>
+<li>Install Selenium webdriver - gem install selenium-webdriver</li>
+<li>Install Rspec - gem install rspec</li>
 </ul>
 
 <h2>
 <a id="installation-setup-for-windows" class="anchor" href="#installation-setup-for-windows" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation Setup for Windows</h2>
 
 <ul>
-<li>Install Ruby</li>
-<li>Install Cucumber</li>
-<li>Install Capybara</li>
-<li>Install selenium webdriver</li>
-<li>Install rspec</li>
+<li>Install Ruby - <a href="http://rubyinstaller.org/">Ruby Installer</a>
+</li>
+<li>Install Cucumber - gem install cucumber</li>
+<li>Install Capybara - gem install capybara</li>
+<li>Install selenium webdriver - gem install selenium-webdriver</li>
+<li>Install rspec - gem install rspec</li>
 </ul>
       </section>
     </div>
