Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a id="installation-setup---mac" class="anchor" href="#installation-setup---mac" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation Setup - MAC</h2>
 
 <ul>
-<li>Install Ruby - brew install cucumber</li>
+<li>Install Ruby - brew install ruby</li>
 <li>Install Cucumber - gem install cucumber</li>
 <li>Install Capybara - gem install capybara</li>
 <li>Install Selenium webdriver - gem install selenium-webdriver</li>
