Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
 <li>Install selenium webdriver - gem install selenium-webdriver</li>
 <li>Install rspec - gem install rspec</li>
 </ul>
+
+<h2>
+<a id="references" class="anchor" href="#references" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>References</h2>
+
+<ul>
+<li>Cucumber - <a href="https://www.google.co.in/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=1&amp;cad=rja&amp;uact=8&amp;ved=0ahUKEwirtvWf76jLAhVKCY4KHThVAcUQFggbMAA&amp;url=https%3A%2F%2Fwiki.kuali.org%2Fdownload%2Fattachments%2F329384409%2FThe%2520Cucumber%2520Book.pdf%3Fversion%3D1%26modificationDate%3D1407504510000%26api%3Dv2&amp;usg=AFQjCNEwixnbrWYSEM1teUwGcUIZDO8_0g&amp;sig2=q5nKSM_mzfH9bQ5u4v2oiw">The Cucumber Book</a>
+</li>
+<li>Capybara - <a href="https://gist.github.com/zhengjia/428105">Cheat Sheet</a>
+</li>
+</ul>
       </section>
     </div>
 
